# ds-u2-actividad-1-listasenlazadassimples-JoseEmiliano12

./: CMakeLists.txt  Doxyfile  ListaGestion.h  ListaSensor.h  README.md  SensorBase.h  SensorPresion.h  SensorTemperatura.h  main.cpp
CarpetaLatex/: latex
docs/html/: doxygen.css  graph_legend.html  index.html  navtreedata.js
